# RGDev.App.AssettoCorsaResultsAnalizer

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  README.md  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json  vite-plugin-ac-local.ts  vite.config.ts
.ai/: data-models.md  mission.md  rules.md  tech-stack.md  ui-charts.md
.changelog/: CHANGELOG_PROYECTO.md  CHANGELOG_TECNICO.md
api/: sessions.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/telemetry/: mod.rs  poller.rs  reader.rs  storage.rs
src/components/charts/: AiLevelHistogram.tsx  AiOpponentsBar.tsx  AssistsGaugeCluster.tsx  CalendarHeatmap.tsx  ConsistencyRadar.tsx  FinishStatusDonut.tsx  GapToLeaderChart.tsx  LapTimeBoxPlot.tsx  LapTimesChart.tsx  PositionChart.tsx  SectorComparisonChart.tsx  TelemetryCharts.tsx  TrackTreemap.tsx  TyreStrategyTimeline.tsx  WeatherCard.tsx  WinPodiumRate.tsx
src/components/driver/: DriverDetailView.tsx
src/components/file-input/: FileDropZone.tsx
src/components/history/: HistoryDashboard.tsx
src/components/layout/: AppShell.tsx
src/components/session/: DataAnalysis.tsx  SessionDashboard.tsx  StandingsTable.tsx  (+1 more)
src/components/session-list/: SessionCard.tsx
src/i18n/: es.ts
src/services/: auto-setup.ts  car-asset-service.ts  car-image-catalog.ts  file-loader.ts  session-cache.ts  telemetry-service.ts
src/stores/: session-store.ts  telemetry-store.ts
(+27 files in other folders)
