[package]
name = "ac-results-analyzer"
version = "1.0.0"
description = "Assetto Corsa Results Analyzer — Desktop Edition"
authors = ["RGDev"]
edition = "2021"

[lib]
name = "ac_results_analyzer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
