[package]
name = "ac-results-analyzer"
version = "1.0.0"
description = "Assetto Corsa Results Analyzer — Desktop Edition"
authors = ["RGDev"]
edition = "2021"

[lib]
name = "ac_results_analyzer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
] }
